added watched recepies preview
